--- a/src/components/Block.scss
+++ b/src/components/Block.scss
@@ -1,4 +1,5 @@
 @import '../style/colors';
+@import '../style/dimens';
 
 $border-radius: 4px;
 $border-color: #999;
@@ -7,6 +8,9 @@ $rotate-time: 0.70s;
 
 :local(.container) {
   display: inline-block;
+  font-size: $block-text-size;
+  color: $block-text-color;
+  font-weight: 500;
   .inner-container {
     border: 2px solid $border-color;
     border-radius: round($border-radius * 1.5);
@@ -15,7 +19,7 @@ $rotate-time: 0.70s;
     cursor: pointer;
 
     .side {
-      padding: 5px;
+      padding: 6px 10px;
       text-align: center;
     }
 
@@ -39,9 +43,28 @@ $rotate-time: 0.70s;
 
     transition: $rotate-time;
 
+    @keyframes fade1 {
+      0%   { opacity: 0; }
+      100% { opacity: 1; }
+    }
+
+    @keyframes fade2 {
+      0%   { opacity: 0; }
+      100% { opacity: 1; }
+    }
+
     &.rotated {
       transition: $rotate-time;
       transform: rotate(180deg);
+    }
+
+    &.rotated .text {
+      animation: fade1 $rotate-time ease-in-out;
+      transform: rotate(180deg);
+    }
+
+    &:not(.rotated) .text {
+      animation: fade2 $rotate-time ease-in-out;
     }
   }
 }
