--- a/src/components/Block.scss
+++ b/src/components/Block.scss
@@ -2,7 +2,7 @@
 @import '../style/dimens';
 
 $border-radius: 4px;
-$border-color: #999;
+$border-color: #777;
 $divider-color: darken($border-color, 10%);
 $rotate-time: 0.70s;
 
@@ -10,16 +10,17 @@ $rotate-time: 0.70s;
   display: inline-block;
   font-size: $block-text-size;
   color: $block-text-color;
+  width: $block-width;
   font-weight: 500;
   .inner-container {
-    border: 2px solid $border-color;
+    border: 1px solid $border-color;
     border-radius: round($border-radius * 1.5);
     box-shadow: 0 0 3px black;
     margin: 3px;
     cursor: pointer;
 
     .side {
-      padding: 6px 10px;
+      padding: 6px 0;
       text-align: center;
     }
 
