--- a/src/components/Bank.scss
+++ b/src/components/Bank.scss
@@ -3,10 +3,23 @@
 :local(.container) {
   border: 2px solid #000;
   border-radius: 4px;
+  margin: 10px 0;
   height: $block-width * 1.5;
+  position: relative;
+
+  .title {
+    font-size: $small-text-size;
+    font-weight: 400;
+    padding: 5px;
+    position: absolute;
+    z-index: 1;
+  }
 
   .blocks {
     padding: 10px;
     display: flex;
+    position: absolute;
+    z-index: 2;
+    top: 15px;
   }
 }
