--- a/src/components/Bank.scss
+++ b/src/components/Bank.scss
@@ -1,13 +1,14 @@
 @import '../style/dimens';
 
 :local(.container) {
-  border: 2px solid #000;
+  border: 2px solid #555;
   border-radius: 4px;
   margin: 10px 0;
   height: $block-width * 1.5;
   position: relative;
 
   .title {
+    color: #444;
     font-size: $small-text-size;
     font-weight: 500;
     padding: 5px;
