--- a/src/components/Bank.scss
+++ b/src/components/Bank.scss
@@ -11,7 +11,7 @@
     color: #444;
     font-size: $small-text-size;
     font-weight: 500;
-    padding: 5px;
+    padding: 3px 4px;
     position: absolute;
     z-index: 1;
   }
