--- a/src/components/Block.scss
+++ b/src/components/Block.scss
@@ -16,7 +16,7 @@ $rotate-time: 0.70s;
     border: 1px solid $border-color;
     border-radius: round($border-radius * 1.5);
     box-shadow: 0 0 3px black;
-    margin: 3px;
+    margin: 4px 3px;
     cursor: pointer;
 
     .side {
