--- a/src/containers/App.scss
+++ b/src/containers/App.scss
@@ -10,6 +10,7 @@ html, body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: $default-text-size;
   background-color: $app-bg-color;
+  color: $default-text-color;
   height: 100vh;
   padding: 20px;
   box-sizing: border-box;
