--- a/src/style/colors.scss
+++ b/src/style/colors.scss
@@ -1,4 +1,7 @@
-$app-bg-color: #EEE;
+$app-bg-color: #F6F6F6;
+$bank-bg-color: #FCFCFC;
+$bank-border-color: #BBB;
+$default-text-color: #222;
 $block-text-color: #222;
 
 $no-unit: #888;
