--- a/src/components/Bank.scss
+++ b/src/components/Bank.scss
@@ -1,24 +1,24 @@
 @import '../style/dimens';
+@import '../style/colors';
 
 :local(.container) {
-  border: 2px solid #555;
-  border-radius: 4px;
+  border: 1px solid $bank-border-color;
+  border-radius: 6px;
   margin: 10px 0;
-  height: $block-width * 1.5;
   position: relative;
+  background-color: $bank-bg-color;
 
   .title {
-    color: #444;
+    color: darken($bank-border-color, 15%);
     font-size: $small-text-size;
-    font-weight: 500;
-    padding: 3px 4px;
+    font-weight: 400;
+    padding: 5px 7px;
     position: absolute;
     z-index: 1;
   }
 
   .blocks {
     padding: 10px;
-    display: flex;
     position: absolute;
     z-index: 2;
     top: 15px;
