Tweaked the CSS

--- a/src/components/ComputedTotal.scss
+++ b/src/components/ComputedTotal.scss
@@ -3,6 +3,6 @@
 :local(.container) {
   font-size: $block-text-size;
   margin-left: 1ex;
-  margin-bottom: 16px;
+  margin-bottom: 1em;
   font-weight: 500;
 }
