--- a/src/components/Bank.scss
+++ b/src/components/Bank.scss
@@ -4,7 +4,7 @@
 :local(.container) {
   border: 1px solid $bank-border-color;
   border-radius: 6px;
-  margin: 10px 0;
+  margin: 0.5em 0;
   position: relative;
   background-color: $bank-bg-color;
 
