--- a/src/containers/App.scss
+++ b/src/containers/App.scss
@@ -12,6 +12,6 @@ html, body {
   background-color: $app-bg-color;
   color: $default-text-color;
   height: 100vh;
-  padding: 20px;
+  padding: 15px 2%;
   box-sizing: border-box;
 }
