Tweaked some styling

--- a/src/style/colors.scss
+++ b/src/style/colors.scss
@@ -1,6 +1,6 @@
 $app-bg-color: #F6F6F6;
 $bank-bg-color: #FCFCFC;
-$bank-border-color: #BBB;
+$bank-border-color: #CCC;
 $default-text-color: #222;
 $block-text-color: #222;
 
