--- a/src/style/colors.scss
+++ b/src/style/colors.scss
@@ -1,3 +1,6 @@
+$nav-bg-color-1: #69F;
+$nav-bg-color-2: #36F;
+$nav-fg-color: #F6F6F6;
 $app-bg-color: #F6F6F6;
 $bank-bg-color: #FCFCFC;
 $bank-border-color: #CCC;
