Added problem sets to side menu

--- a/src/style/colors.scss
+++ b/src/style/colors.scss
@@ -2,6 +2,10 @@ $nav-bg-color-1: #69F;
 $nav-bg-color-2: #36F;
 $nav-fg-color: #F6F6F6;
 $app-bg-color: #F6F6F6;
+
+$side-menu-bg-color: #373a47;
+$side-menu-fg-color: #b8b7ad;
+
 $bank-bg-color: #FCFCFC;
 $bank-border-color: #CCC;
 $default-text-color: #222;
