--- a/src/style/dimens.scss
+++ b/src/style/dimens.scss
@@ -1,5 +1,6 @@
 $nav-height: 40px;
 $nav-title-text-size: 20px;
+$side-menu-width: 240px;
 $default-text-size: 16px;
 $block-text-size: 14px;
 $small-text-size: 12px;
