--- a/src/style/utils.scss
+++ b/src/style/utils.scss
@@ -17,3 +17,18 @@
     outline: none;
   }
 }
+
+@mixin transition($property, $time) {
+  -moz-transition: $property $time;
+  -o-transition: $property $time;
+  -ms-transition: $property $time;
+  -webkit-transition: $property $time;
+  transition: $property $time;
+}
+
+@mixin transform($t) {
+  -webkit-transform: $t;
+  -moz-transform: $t;
+  -ms-transform: $t;
+  transform: $t;
+}
