--- a/src/style/colors.scss
+++ b/src/style/colors.scss
@@ -1,5 +1,5 @@
-$nav-bg-color: #47F;
-$nav-fg-color: #F6F6F6;
+$nav-bg-color: #41568e;
+$nav-fg-color: rgba(255, 255, 255, 0.875);
 $app-bg-color: #F6F6F6;
 
 $side-menu-bg-color: #373a47;
