--- a/src/components/SideMenu.scss
+++ b/src/components/SideMenu.scss
@@ -47,7 +47,7 @@ $icon-margin-right: 1em;
     a {
       display: block;
       margin: 3px 20px 3px 0;
-      i {
+      .icon {
         margin-right: $icon-margin-right * 0.75;
       }
     }
