Normalized JSON data, added filtering

--- a/src/containers/Home.scss
+++ b/src/containers/Home.scss
@@ -8,9 +8,9 @@ $card-margin: 5px;
     padding-left: $card-margin;
     padding-right: $card-margin;
   }
-  .categories {
+  .subjects {
     width: 100%;
-    .category {
+    .subject {
       width: 240px;
       display: inline-block;
       margin: $card-margin;
